@startuml

title __HUMAN-EXAMPLE's Class Diagram__\n

  namespace  {
    namespace om.abolfazl.human_example {
      interface com.abolfazl.human_example.Actor {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      interface com.abolfazl.human_example.Artist {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      enum Gender {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      class com.abolfazl.human_example.GenericsDemo {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      abstract class com.abolfazl.human_example.Human {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      class com.abolfazl.human_example.Main {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      interface com.abolfazl.human_example.Musician {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      class com.abolfazl.human_example.Pair {
      }
    }
  }
  

  namespace  {
    namespace om.abolfazl.human_example {
      class com.abolfazl.human_example.Performer {
      }
    }
  }
  

  com.abolfazl.human_example.Human o-- com.abolfazl.human_example.Gender : gender
  com.abolfazl.human_example.Pair o-- X : x
  com.abolfazl.human_example.Pair o-- Y : y
  com.abolfazl.human_example.Performer .up.|> com.abolfazl.human_example.Actor
  com.abolfazl.human_example.Performer .up.|> com.abolfazl.human_example.Artist
  com.abolfazl.human_example.Performer .up.|> com.abolfazl.human_example.Musician
  com.abolfazl.human_example.Performer -up-|> com.abolfazl.human_example.Human


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
